Test and fixture updates

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ readme = "README.md"
 python = "^3.12"
 activitypub-testsuite = {path = "../activitypub-testsuite", develop = true}
 firm-server = {path = "../../firm-server", develop = true}
+pytest-httpx = "^0.30.0"
 
 
 [tool.poetry.group.dev.dependencies]
