--- a/firm_aptesting/config.toml
+++ b/firm_aptesting/config.toml
@@ -5,7 +5,7 @@ dereferencing = true
 c2s.default = false
 # c2s.outbox.default = true
 # c2s.outbox.get = true
-# c2s.outbox.post = true
+c2s.outbox.post.default = true
 # c2s.outbox.post.Create = true
 # c2s.outbox.post.Update = true
 # c2s.outbox.post.Delete = true
@@ -19,20 +19,22 @@ c2s.outbox.post.Follow = true
 
 ### S2S
 s2s.default = false
-# s2s.inbox.default = true
+s2s.inbox.default = false
 s2s.inbox.get = true
-# s2s.inbox.post.default = true
+s2s.inbox.post.default = true
 s2s.inbox.post.Create = true
-# s2s.inbox.post.Update = true
-# s2s.inbox.post.Delete = true
-# s2s.inbox.post.Follow = true
-# s2s.inbox.post.Accept = true
-# s2s.inbox.post.Reject = true
-# s2s.inbox.post.Add = true
-# s2s.inbox.post.Remove = true
-# s2s.inbox.post.Like = true
-# s2s.inbox.post.Announce = true
-s2s.inbox.post.Undo.default = false
+# s2s.inbox.post.Update = false
+# s2s.inbox.post.Delete = false
+s2s.inbox.post.Follow = true
+# s2s.inbox.post.Accept.default = false
+s2s.inbox.post.Accept.Follow = true
+# s2s.inbox.post.Reject.default = false
+s2s.inbox.post.Reject.Follow = true
+# s2s.inbox.post.Add = false
+# s2s.inbox.post.Remove = false
+# s2s.inbox.post.Like = false
+# s2s.inbox.post.Announce = false
+# s2s.inbox.post.Undo.default = false
 s2s.inbox.post.Undo.Follow = true
 # s2s.inbox.shared = true
 
@@ -46,7 +48,7 @@ collections.following = true
 ### Other AP featuress
 # tombstones = true
 # Some AP servers don't support standard audience processing
-# audience = false
+audience = false
 
 ### Other non-AP features
 webfinger = true
