--- a/firm_aptesting/config.toml
+++ b/firm_aptesting/config.toml
@@ -18,7 +18,7 @@ c2s.outbox.post.Add = false
 c2s.outbox.post.Remove = false
 c2s.outbox.post.Like = false
 c2s.outbox.post.Block = false
-#c2s.outbox.post.Undo.default = false
+c2s.outbox.post.Undo.default = false
 c2s.outbox.post.Undo.Follow = false
 
 ### S2S
